Fix task-scheduler restart thread-safety and history list race
RESTART tasks iterated the live player list and called sendSystemMessage
off the main thread when triggered via the dashboard's manual-execute
endpoint; the player-list warning now runs inside the same server.execute()
block as the halt() call. TaskManager's per-task execution history list
is now a CopyOnWriteArrayList since it's mutated from both the scheduler
tick and the dashboard execute path concurrently.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01Sc9EitwigUmGjKwYtGhMVd